--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+  <script src="https://kit.fontawesome.com/9a96e0cc1a.js" crossorigin="anonymous"></script>
+  </head>
 <body>
-  <app-nav-bar></app-nav-bar>
+  <app-root></app-root>
 </body>
 </html>
